# jira-tui

./: .editorconfig  Cargo.toml  README.md
src/: main.rs
