[package]
name = "jira-tui"
description = "A terminal user interface for JIRA"
homepage = "https://github.com/beeetooo/jira-tui"
documentation = "https://github.com/beeetooo/jira-tui"
repository = "https://github.com/beeetooo/jira-tui"
categories = ["command-line-utilities"]
authors = ["Alberto Romero <aromeronavia@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
crossterm = "0.20"
